--- a/admin/index.html
+++ b/admin/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Admin</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/admin/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="admin-container">
@@ -109,6 +108,10 @@
         </main>
     </div>
 
-    <script src="/admin/script.js"></script>
+    <script>
+        // Load GitHub token from environment
+        const GITHUB_TOKEN = process.env.GITHUB_TOKEN;
+    </script>
+    <script src="script.js"></script>
 </body>
 </html>
